# itc-hackathon

./: .gitignore  README.md  pyproject.toml  vercel.json
results/: ablations.json  cartridge.json  large_scale.json  memory_demo.json  scaling.json
scripts/: README_GPU.md  ablation_study.py  capture_fixtures.py  cartridge_eval.py  large_scale_eval.py  make_cost_chart.py  make_large_scale_chart.py  make_scaling_chart.py  memory_demo.py  memory_diag.py  memory_eval.py  memory_napora_demo.py  memory_proof.py  memory_retrieval_test.py  personalization_demo.py  retrieval_bakeoff.py  run_demo_server.sh  scaling_sweep.py  skills_demo.py  smoke_test.py
skill-acquisition/: golden-examples.txt  make_physics_charts.py  skill-acquisition-d2l.py  skill-acquisition-physics-timing.py  skill-acquisition-t2l.py
src/agenthn/core/: config.py  model.py
src/agenthn/memory/: README.md  __init__.py  baselines.py  live.py  memory_store.py  nap_memory.py  retriever.py  scenarios.py  scoring.py  tasks.py
src/agenthn/personalization/: extractor.py  profile_store.py
src/agenthn/skills/: lumen_bench.py  skill_store.py
src/agenthn/webapp/: __init__.py  app.py  memory_service.py  runtime.py  service.py  skills_service_product.py  skills_service_router.py
src/agenthn/webapp/static/: app.js  config.js  index.html  styles.css
src/agenthn/webapp/static/fixtures/: .captured.json  memory_apollo_migration_medium.json  memory_apollo_migration_small.json  memory_meta.json  skills_product.json  (+6 more)
task1-part1/: README.md  skill_to_adapter.py
task1-part1/outputs/: systematic-debugging.result.json
